--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     
 </head>
 <body>
+    Merhaba
 <div class="banner">
     <div class="navbar">
         <img src="pink.jpg" alt="" class="logo" width="100" height="100">
